--- a/style.css
+++ b/style.css
@@ -1,15 +1,48 @@
+body {
+    background-color: white;
+    padding: 4vw;
+}
+
+.card {
+    margin-bottom: 24px;
+    background-color: white;
+    border-radius: 8px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    max-width: 400px;
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.profile {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    
+}
+
+img {
+    border-radius: 100px;
+    width: 200px;
+}
+
 h1 {
-	text-align: center;
-	color: darkblue;
-	font-family: sans-serif;
-	font-size:6vw;
-	margin-bottom: 0;
+    text-align: center;
+    color: #0b0016;
+    font-family: sans-serif;
+    font-size: 24px;
+    margin-bottom: 0;
 }
 
 h2 {
-	text-align: center;
-	color:cornflowerblue;
-	font-family: sans-serif;
-	font-size:3vw;
-	margin-bottom: 0;
+    text-align: center;
+    color: cornflowerblue;
+    font-family: sans-serif;
+    font-size: 16px;
+    margin-bottom: 0;
 }
