--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .card {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
     background-color: white;
     border-radius: 8px;
     padding-left: 24px;
@@ -12,18 +12,17 @@ body {
     padding-top: 32px;
     padding-bottom: 32px;
     max-width: 400px;
-    min-width: 200px;
+    min-width: 300px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
 }
 
 .profile {
     margin-left: auto;
     margin-right: auto;
     width: 200px;
-    
+
 }
 
 img {
@@ -45,4 +44,29 @@ h2 {
     font-family: sans-serif;
     font-size: 16px;
     margin-bottom: 0;
+}
+
+a {
+    text-decoration: none;
+    color:black;
+}
+
+a:hover {
+    color:#EB376D;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    font-family: sans-serif;
+    font-size: 16px;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+li:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
