--- a/week6c/responsive-grid.css
+++ b/week6c/responsive-grid.css
@@ -34,3 +34,26 @@ body {
 /**************
 Grid Formatting
 **************/
+
+main {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-gap: .5rem;
+	max-width: 95vw;
+	margin: .5rem auto;
+}
+
+img {
+	display: block;
+	width: 100%;
+	border-color: black;
+	border-style: solid;
+	border-width: 2px;
+	border-radius: 5px;
+}
+
+@supports (display: grid){
+	.warning {
+		display: none;
+	}
+}
