--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
 	/* defines space between cards*/
 	margin-bottom: 16px;
 	/* drop shadow*/
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
 }
 
 /* centers name and IGME 230 */
