--- a/final/style.css
+++ b/final/style.css
@@ -87,6 +87,24 @@ header div {
     max-width: 100%;
 }
 
+/*Return Button: Returns usere to the top of the page*/
+#return_button{
+    position: fixed;
+    display: flex;
+    bottom: 16px;
+    right: 16px;
+    width: 64px;
+    height: 64px;
+    opacity: 0;
+    transition: opacity 0.2s ease-out .1s;
+}
+
+#return_button a img{
+    max-width: 100%;
+    max-height: 100%;
+    transform: rotate(180deg);
+}
+
 /*Button Styles*/
 button {
     background: #5182FF;
@@ -98,6 +116,7 @@ button {
     text-align: center;
     color: #fafafa;
     transition: all .1s ease-out .1s;
+    opacity:
 }
 
 button:hover {
@@ -181,14 +200,14 @@ p {
     margin-bottom: 2em;
 }
 
-a {
+nav a {
     color: black;
     padding: 1em;
     text-decoration: none;
     transition: all 0.2 ease-out 0;
 }
 
-a:hover {
+nav a:hover {
     background-color: dodgerblue;
     color: #fafafa;
 }
