--- a/fall2018final/fall2018final.css
+++ b/fall2018final/fall2018final.css
@@ -61,6 +61,36 @@ nav {
 	background: lavenderblush;
 }
 
+header,
+footer,
+nav {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.mainmenu {
+	width: 6rem;
+	background: #ccc;
+	display: flex;
+	justify-content: center;
+}
+
+.submenu {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	display: none;
+	background-color: #ddd;
+	position: absolute;
+	z-index: 2;
+}
+
+.submenu li{
+	padding-left: .25rem;
+	background-color: #ddd;
+}
+
 @media (max-width:600px) {
 
 	#yourgrid {
@@ -84,6 +114,7 @@ nav {
 	aside {
 		height: auto;
 	}
+
 }
 
 @media (min-width:601px) {
@@ -95,25 +126,26 @@ nav {
 		grid-template-rows: 75px 30px auto 50px;
 	}
 
-	header, footer{
+	header,
+	footer {
 		grid-column: 1 / span 2;
-		display: flex;
-		justify-content: center;
 	}
-	article{
+
+	article {
 		grid-column: 1;
 		grid-row: 2/ span 2;
-		height:100%;
+		height: 100%;
 	}
-	nav{
+
+	nav {
 		grid-column: 2;
 		grid-row: 2;
-		display: flex;
-		justify-content: space-evenly;
+
 	}
-	aside{
-		grid-column:2;
-		grid-row:3;
-		height:100%;
+
+	aside {
+		grid-column: 2;
+		grid-row: 3;
+		height: 100%;
 	}
 }
