--- a/final/style.css
+++ b/final/style.css
@@ -275,6 +275,93 @@ nav a:hover {
     padding: 0 .5em 0 2em;
 }
 
+/*Home Screen*/
+figure {
+	margin: 0;
+	padding: 0;
+}
+
+/*Grid Layout*/
+
+.hideshowicon {
+	margin-left: .5em;
+	height: 100%;
+}
+
+#projectgrid {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	width: 1000px;
+	margin: 0 1em;
+}
+
+.hideshow {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	width: 100%;
+
+	margin-bottom: 2em;
+}
+
+/* Gallery*/
+.hideshow,
+.projgallery {
+	grid-column: 1 /span2;
+}
+
+.projgallery {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+
+}
+
+.projgallery div {
+	margin-bottom: 1em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/*Positions text above gallery cards*/
+.carddetails {
+	font-family: bello-pro, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5em;
+	position: absolute;
+	z-index: 1;
+}
+
+#newsdeck {
+	grid-column: 1 /span 2;
+}
+
+#mobilebanking {
+	grid-column: 1;
+	grid-row: 2/ span 2;
+	margin-right: 8px;
+}
+
+#vehicleregistration {
+	grid-column: 2;
+	margin-left: 8px;
+}
+
+#strongmuseum {
+	grid-column: 2;
+	margin-left: 8px;
+}
+
+/*images*/
+
+.thumbnail img {
+	max-width: 100%;
+	width: auto;
+	height: auto;
+}
+
+
 @media (max-width:640px) {
     section {
         grid-column: 1/ span 2;
