--- a/final/style.css
+++ b/final/style.css
@@ -99,6 +99,12 @@ header div {
     max-width: 100%;
 }
 
+.slidestill {
+    grid-area: header;
+    grid-column-end: span all;
+    max-width: 100%;
+}
+
 /*Return Button: Returns usere to the top of the page*/
 #return_button {
     position: fixed;
@@ -166,7 +172,8 @@ header a:hover {
     background: none;
 }
 
-header h1 {
+header h1,
+.carddetails {
     font-size: 5vw;
     color: white;
     background-color: black;
@@ -277,88 +284,96 @@ nav a:hover {
 
 /*Home Screen*/
 figure {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+hr {
+    border: 1px solid;
+    color: #333333;
+    width: 100%;
+    margin-left: .5em;
 }
 
 /*Grid Layout*/
 
 .hideshowicon {
-	margin-left: .5em;
-	height: 100%;
+    margin-left: .5em;
+    height: 100%;
 }
 
 #projectgrid {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	width: 1000px;
-	margin: 0 1em;
+    margin-top: 2em;
+    grid-column: 1 /span 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
 }
 
 .hideshow {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
 
-	margin-bottom: 2em;
+    margin-bottom: 2em;
 }
 
 /* Gallery*/
 .hideshow,
 .projgallery {
-	grid-column: 1 /span2;
+    grid-column: 1 /span2;
 }
 
 .projgallery {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
 }
 
 .projgallery div {
-	margin-bottom: 1em;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*Positions text above gallery cards*/
 .carddetails {
-	font-family: bello-pro, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.5em;
-	position: absolute;
-	z-index: 1;
+    font-size: 1em;
+    position: absolute;
+    z-index: 1;
 }
 
 #newsdeck {
-	grid-column: 1 /span 2;
+    grid-column: 1 /span 2;
 }
 
 #mobilebanking {
-	grid-column: 1;
-	grid-row: 2/ span 2;
-	margin-right: 8px;
+    grid-column: 1;
+    grid-row: 2/ span 2;
+    margin-right: 8px;
 }
 
 #vehicleregistration {
-	grid-column: 2;
-	margin-left: 8px;
+    grid-column: 2;
+    margin-left: 8px;
 }
 
 #strongmuseum {
-	grid-column: 2;
-	margin-left: 8px;
+    grid-column: 2;
+    margin-left: 8px;
 }
 
 /*images*/
 
+.thumbnail{
+}
+
 .thumbnail img {
-	max-width: 100%;
-	width: auto;
-	height: auto;
+    max-width: 100%;
+    width: auto;
+    height: auto;
 }
 
 
@@ -381,5 +396,24 @@ figure {
 
     .submenu- {
         display: none;
+    }
+
+    /*adjusting the projects grid for mobile*/
+    #mobilebanking {
+        grid-column: 1/ span 2;
+        margin-right: 0;
+    }
+
+    #vehicleregistration {
+        grid-column: 1 /span 2;
+        margin-left: 0;
+
+
+    }
+
+    #strongmuseum {
+        grid-column: 1 /span 2;
+        margin-left: 0;
+
     }
 }
