--- a/final/style.css
+++ b/final/style.css
@@ -21,6 +21,10 @@ nav {
     z-index: 1;
 }
 
+.topnav .icon {
+    display: none;
+}
+
 .nav_elements {
     width: 1000px;
     display: flex;
@@ -266,6 +270,11 @@ nav a:hover {
     list-style-type: none;
 }
 
+/* hides hamburger menu in desktop view*/
+.ham {
+    display: none;
+}
+
 #close {
     display: none;
 }
@@ -367,10 +376,8 @@ hr {
 
 /*images*/
 
-.thumbnail{
-}
-
 .thumbnail img {
+    border-radius: 8px;
     max-width: 100%;
     width: auto;
     height: auto;
@@ -378,8 +385,38 @@ hr {
 
 
 @media (max-width:640px) {
-    nav{
-        position:relative;
+
+    /*responsive nav*/
+    nav {
+        position: -webkit-sticky;
+        /* Safari */
+        position: sticky;
+        top: 0;
+    }
+
+    .topnav a:not(:last-child) {
+        display: none;
+    }
+
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
     }
 
     section {
