--- a/final/style.css
+++ b/final/style.css
@@ -538,19 +538,12 @@ hr {
 }
 
 /*Displays jpgs When WebP images are not Supported*/
-.legacyimg {
+/*.legacyimg {
     display: none;
 }
 
 .no-web .modernimg {
-    position: absolute;
-    overflow: hidden;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    width: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
+   display:none;
 }
 
 .webp .modernimg {
@@ -560,3 +553,4 @@ hr {
 .no-webp .legacyimg {
     display: block;
 }
+*/
