--- a/final/style.css
+++ b/final/style.css
@@ -160,13 +160,17 @@ article {
 .fullsize {
     grid-column: 1/ span 2;
     width: 100%;
+    height: 600px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 
 }
 
 video {
+    margin: 2em;
     object-fit: contain;
+    height:600px;
 }
 
 /*-----------------------------------------*/
