--- a/final/style.css
+++ b/final/style.css
@@ -160,7 +160,6 @@ article {
 .fullsize {
     grid-column: 1/ span 2;
     width: 100%;
-    height: 600px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -247,6 +246,7 @@ header div {
 
 /*Button Styles*/
 aside button {
+    margin-bottom: 2em;
     background: #5182FF;
     border: none;
     border-radius: 8px;
