--- a/final/style.css
+++ b/final/style.css
@@ -525,7 +525,7 @@ hr {
 
 .thumbnail img {
     border-radius: 8px;
-    max-width: 100vw;
+    max-width: 100%;
     width: auto;
     height: auto;
 }
