--- a/final/style.css
+++ b/final/style.css
@@ -347,7 +347,7 @@ p {
     margin-bottom: 2em;
 }
 
-article p a{
+article p a {
     font-size: 1em;
     font-weight: normal;
     color: #5182FF;
@@ -514,9 +514,18 @@ hr {
     margin-left: 8px;
 }
 
+/*bad id name lol*/
 #potions {
     grid-column: 2;
     margin-left: 8px;
+}
+
+#newsdeck a,
+#mobilebanking a,
+#vehicleregistration a,
+#potions a{
+    width: 100%;
+    height: 100%;
 }
 
 /*-----------------------------------------*/
